
editordir=$(pkgdatadir)/editor

editor_configdir=$(editordir)/config/

editor_config_DATA=config/config-badvalues.xml config/config-malformed.xml config/config-nonvalid.xml config/config-small.xml config/config-valid.xml config/mpc-config.xsd

editor_docdir=$(editordir)/doc/
editor_doc_DATA= doc/editor.doxyfile

editor_imgsdir=$(editordir)/images/
editor_imgs_DATA=images/add_button.png images/bottom.gif images/collapsed2.png
editor_imgs_DATA+=images/collapsed.gif images/del_button.png images/delete.png
editor_imgs_DATA+=images/edit.png images/expanded2.png images/expanded.gif
editor_imgs_DATA+=images/favicon.ico images/favicon.png images/minus.png
editor_imgs_DATA+=images/plus.png images/tabletree-arrow2.gif
editor_imgs_DATA+=images/tabletree-dots2.gif images/tabletree-dots.gif images/title.gif images/toptitle.gif


editor_javadir=$(editordir)/javascript/
editor_java_DATA=javascript/BlobBuilder.js javascript/EditorController.js javascript/editor.js
editor_java_DATA+=javascript/EditorModel.js javascript/EditorView.js javascript/EditorXML.js
editor_java_DATA+=javascript/FileSaver.js javascript/sctk_runtime_config_meta.js
editor_java_DATA+=javascript/sctk_runtime_config_xsd.js javascript/xmllint.js

editor_styledir=$(editordir)/style/
editor_style_DATA=style/editor.css

editor_DATA=index.html